    Account for "features" when calculating project metrics
    Count networks the same way `lxc network list` would by ignoring "unknown" & "loopback" devices
    Hide certain resource details if the user isn't admin (#452)
    Enable setting nvidia keys when creating a container (#456)
    Show image variant on import images modal
    Order host's by alias when fetching from the DB (#462)

Fixed
    First run doesn't toggle passwords properly (#390)
    Cant override users current project with HTTP header in "Universe"
    Cant create directory storage pool
    Cant use shells other than bash
    Instance names are sometimes invalid when deploying deployment (#379)
    Delete host (#365)
    Node holding onto client sockets that will be closed (#417)
    Image type icon in images sidebar on LXD 3 host
    Instance memory usage pop-overs overlap
    Server overview leaks all project names (#453)
    Offline host/s breaks background cron jobs (#362)

API Changes
    Removed `memoryLimit` from CreateVirtualMachineController in favour of config param (#419)
    Image description when searching images now contains html, the plain description is now kept in the key origDescription
    projectGraphData became projectsUsageGraphData when fetching the general dashboard
    stats key was removed fetching the general dashboard
    Drop alias parameter from all controllers
    Add currentProject key when outputting host as JSON
    Don't load / return server "resources" key unless loading server overview
    Don't load / return clustersAndHosts when loading dashboard
    Don't load instances with GetHostOverview
    Load warnings & projectAnalytics with GetHostOverview
    Remove duplicate profiles key from CreateInstance service (internal)

0.13.0 - 18/07/2020

Added
    Setting for storing timezone (#371)
    Support for copying instances between projects (#375)
    Optionally copying profiles when copying instance